--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+
+<div class="index-image"><img src="/assets/fitness-clipart.png" alt="" />
+
+<div class="jumbotron">
+  <h1>Welcome to FitLog!</h1>
+  <p>Keeping track of your workout has never been easier.</p>
+  <p><a class="btn btn-primary btn-lg" href="sessions/new/" role="button">Login</a>
+  <a class="btn btn-success btn-lg" href="users/new/" role="button">Create a new account</a></p>
+</div>
+
+
+</div>
