--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,6 +1,12 @@
-<%= simple_form_for(@workout, html: { class: 'form-horizontal' }) do |f| %>
-<%= f.input :date, label: "Date" %>
-<%= f.input :workout, label: "What area did you workout?" input_html: { class: "form-control" } %>
-<%= f.input :length, label: "How long was the workout" input_html: { class: "form-control" } %>
+<div class="container">
+
+
+
+<%= simple_form_for @workout, html: { class: 'form-horizontal' } do |f| %>
+<%= f.input :date, input_html: { class: 'form-control' } %>
+<%= f.input :workout, input_html: { class: 'form-control' } %>
+<%= f.input :length, input_html: { class: 'form-control' } %>
   <br>
   <%= f.button :submit %>
+<% end %>
+</div>
