--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,12 +1,11 @@
 <div class="container">
 
-
-
 <%= simple_form_for @workout, html: { class: 'form-horizontal' } do |f| %>
 <%= f.input :date, input_html: { class: 'form-control' } %>
 <%= f.input :workout, input_html: { class: 'form-control' } %>
 <%= f.input :length, input_html: { class: 'form-control' } %>
   <br>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: 'btn btn-primary' %>
+  <%= link_to "Cancel", root_path, class: "btn btn-default" %>
 <% end %>
 </div>
