--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,17 @@
-<div class="container">
+<div class="container-fluid">
 
+<div class="row">
+<div class="col-md-12">
 
 
 <h1>Track your workout!</h1>
 <% @user.workouts.each do |w| %>
   <h3><%= w.workout %></h3>
   <ul>
-    <li>Date: <%= w.date %></li>
+    <li>Date: <%= w.date.to_formatted_s(:short) %></li>
     <li>Length: <%= w.length %> </li>
-  </ul>
-<% end %>
-<%= link_to 'Add A Workout', new_workout_path %>
+<% end %><br>
+<%= link_to "Create a new workout", new_workout_path, class: "btn btn-info btn-lg" %>
+</div>
+</div>
 </div>
