updated the readme

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body>
 
   <nav class="navbar navbar-inverse">
-    <a class="navbar-brand" href="#">FitLog</a>
+    <a class="navbar-brand" href="/workouts">FitLog</a>
     <% flash.each do |message_type, message| %>
      <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
