--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="index-image"><img src="/assets/fitness-clipart.png" alt="" />
+<div class="index-image"><img src="/assets/fitness-clipart.png" />
 
 <div class="jumbotron">
   <h1>Welcome to FitLog!</h1>
