--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
 
 
-<h1>This is the workouts#index page</h1>
+<h1>All the workouts listed below:</h1>
 <ul>
   <li>
 <% @workouts.each do |workout| %>
   <%= link_to workout.date.to_formatted_s(:short), workout %>
-  <%= workout['workout'] %>
+  <%= workout['workout'] %><br>
   <% end %>
 </li>
 </ul>
