--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
-  <%= @workout.workout %><br>
-  <%= @workout.length %><br>
-  <%= @workout.date.to_formatted_s(:short) %><br>
+
+  <h2><%= @workout.workout %></h2>
+  <h3><%= @workout.length %><br>
+  <%= @workout.date.to_formatted_s(:short) %></h3>
 
     <%= link_to "Back", root_path %> |
     <%= link_to "Edit", edit_workout_path(@workout) %> |
