--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,9 @@
-
-  <%= @user.name %><br>
-  <%= @user.email %><br>
-  <br>
+<%= simple_form_for @user, html: { class: 'form-horizontal' } do |f| %>
+<%= f.input :name, input_html: { class: 'form-control' } %>
+<%= f.input :email, input_html: { class: 'form-control' } %>
+<%= f.button :submit, class: 'btn btn-primary' %>
+<% end %>
+<br>
 
     <%= link_to "Back", root_path %> |
     <%= link_to "Edit", edit_user_path(@user) %> |
