--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -2,6 +2,7 @@
 <%= f.input :date, input_html: { class: 'form-control' } %>
 <%= f.input :workout, input_html: { class: 'form-control' } %>
 <%= f.input :length, input_html: { class: 'form-control' } %>
+<%= f.input :comment, input_html: { class: 'form-control' } %>
   <br>
   <%= f.button :submit, class: 'btn btn-primary' %>
   <%= link_to "Cancel", root_path, class: "btn btn-default" %>
