--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,8 +1,10 @@
-<div class="container">
-
-
-<h1>New Workout</h1>
-
-<%= render 'form' %>
-
+<div class="col-md-6 col-md-offset-3">
+  <div class="row">
+   <div class="panel panel-default">
+     <div class="panel-heading-a">
+       <h1>New Workout</h1>
+     </div>
+     </div>
+   <%= render 'form' %>
+ </div>
 </div>
