--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to current_user.email, users_path %></li>
+          <li><%= link_to "Edit", edit_user_path(current_user) %></li>
+
           <li><%= link_to "Logout", logout_path, {method: "DELETE"} %></li>
         <% else %>
           <li><%= link_to "Login", new_session_path %></li>
