--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,5 @@
 <%= simple_form_for @user, html: { class: 'form-horizontal' } do |f| %>
 <%= f.input :name, input_html: { class: 'form-control' } %>
 <%= f.input :email, input_html: { class: 'form-control' } %>
-<%= f.button :submit, class: 'btn btn-primary' %>
+<%= f.submit 'Update Profile', class: 'btn btn-success' %>
 <% end %>
-<br>
-
-    <%= link_to "Back", root_path %> |
-    <%= link_to "Edit", edit_user_path(@user) %> |
-    <%= link_to "Delete", user_path(@user), method: :delete, data: { confirm: "Are you sure?" } %>
