--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,8 +1,11 @@
 <div class="col-md-6 col-md-offset-3">
   <div class="row">
    <div class="panel panel-default">
-     <div class="panel-heading-a">
-       <h1>New Workout</h1>
+     <div class="panel-heading">
+       <div class="new-w">
+         <h1>Create your workout</h1>
+       </div>
+
      </div>
      </div>
    <%= render 'form' %>
