cleaned up code

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,11 @@
-
 <div class="index-image">
   <%= image_tag 'fitness-clipart.png' %>
-
-<div class="jumbotron">
-  <h1>Welcome to FitLog!</h1>
-  <p>Keeping track of your workout has never been easier.</p>
-  <p><a class="btn btn-primary btn-lg" href="sessions/new/" role="button">Login</a>
-  <a class="btn btn-success btn-lg" href="users/new/" role="button">Create a new account</a></p>
-</div>
-
-
+  <div class="jumbotron">
+    <h1>Welcome to FitLog!</h1>
+    <p>Keeping track of your workout has never been easier.</p>
+    <p>
+    <a class="btn btn-primary btn-lg" href="sessions/new/" role="button">Login</a>
+    <a class="btn btn-success btn-lg" href="users/new/" role="button">Create a new account</a>
+    </p>
+  </div>
 </div>
